Мелкие исправление, организация структуры проекта